# ITMO_automation

./: .gitignore  pyproject.toml
home_work/: 2_hw.py  3_hw.py  4_hw.py  4_hw_car.py  5_hw.py
python_trening/: task_1_numbers.py  task_2_string.py  task_3_list.py  task_4_bool.py  task_5_tuple.py  task_6_function.py  task_7_anotation.py  task_8_if.py  task_8_if_elif_else.py  task_9_checks.py  task_9_inheritance.py  task_9_oop.py  task_9_oop_2.py  task_9_oop_3.py  task_9_oop_super.py
tests/: test_one.py  test_two_open_site.py
