[project]
name = "itmo-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Gochev",email = "gematogen2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
